Bug 1062020 - Set video/audio sample discontinuity flag in MSE after seek - r=kinetik