content/media/mediasource/MediaSourceReader.h
@@ -116,6 +116,14 @@ private:
   nsRefPtr<MediaDecoderReader> mVideoReader;
 
   bool mEnded;
+
+  // For a seek to complete we need to send a sample with
+  // the mDiscontinuity field set to true once we have the
+  // first decoded sample. These flags are set during seeking
+  // so we can detect when we have the first decoded sample
+  // after a seek.
+  bool mAudioIsSeeking;
+  bool mVideoIsSeeking;
 };
 
 } // namespace mozilla
